Ajout de l'image de NMF

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             <div class="anime-name">Solo Leveling</div>
         </a>
         <a href="NoMoreFantasy/" class="anime-box">
-            <img src="images/NoMoreFantasy.jpg" alt="No More Fantasy">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoQ6rTl19Mqllzr_pjrZrzK5uJfU6xdotF0A&s" alt="No More Fantasy">
             <div class="anime-name">No More Fantasy</div>
         </a>
         <a href="Naruto/" class="anime-box">
