--- a/SoloLeveling/index.html
+++ b/SoloLeveling/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Style.css" />
-    <link rel="shortcut icon" type="image/png" href="/logo.png" />
+    <link rel="stylesheet" href="SpecialStyle.css" />
+    <link rel="stylesheet" href="../Style.css" />
+    <link rel="shortcut icon" type="image/png" href="Logo.png" />
     <script src="https://kit.fontawesome.com/85ca233acb.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="jquery/les-styles.css">
@@ -17,6 +18,9 @@
 </head>
 
 <body>
+    <style>
+
+    </style>
     <header>
         <nav class="navbar">
             <a href="index.html"><img
@@ -44,8 +48,9 @@
         </div>
     </div>
 
-    <script src="Main.js"></script>
-    <script src="Chapitre.js"></script>
+    <script src="Data.js"></script>
+    <script src="../Main.js"></script>
+    <script src="../Chapitre.js"></script>
     <script>
         general();
     </script>
