Switch => For (optimisation)

--- a/Naruto/index.html
+++ b/Naruto/index.html
@@ -49,7 +49,7 @@
     <script src="../Main.js"></script>
     <script src="../Chapitre.js"></script>
     <script>
-        general();
+        General();
     </script>
 </body>
 
