--- a/SoloLeveling/index.html
+++ b/SoloLeveling/index.html
@@ -52,7 +52,7 @@
     <script src="../Main.js"></script>
     <script src="../Chapitre.js"></script>
     <script>
-        general();
+        General();
     </script>
 </body>
 
