--- a/SoloLeveling/modif.html
+++ b/SoloLeveling/modif.html
@@ -40,7 +40,7 @@
     <script src="../Main.js"></script>
     <script src="../Chapitre.js"></script>
     <script src="../Change.js"></script>
-    <script>generalModif();</script>
+    <script>GeneralModif();</script>
 </body>
 
 </html>
