--- a/Naruto/modif.html
+++ b/Naruto/modif.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="Logo.png" />
     <script src="https://kit.fontawesome.com/85ca233acb.js" crossorigin="anonymous"></script>
     <title>OPROJECT - Naruto</title>
+    <meta name="google-adsense-account" content="ca-pub-1732017259884755">
 </head>
 
 <body>
