--- a/SoloLeveling/modif.html
+++ b/SoloLeveling/modif.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../Style.css" />
     <link rel="shortcut icon" type="image/png" href="Logo.png" />
     <script src="https://kit.fontawesome.com/85ca233acb.js" crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-1732017259884755">
     <title>OPROJECT - Solo Leveling</title>
 </head>
 
