--- a/SoloLeveling/index.html
+++ b/SoloLeveling/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../Style.css" />
     <link rel="shortcut icon" type="image/png" href="Logo.png" />
     <script src="https://kit.fontawesome.com/85ca233acb.js" crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-1732017259884755">
 
     <link rel="stylesheet" href="jquery/les-styles.css">
     <script src="jquery/jquery-1.12.4.js"></script>
