--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
     <title>OPROJECT</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="google-adsense-account" content="ca-pub-1732017259884755">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1732017259884755"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
