--- a/SoloLeveling/modif.html
+++ b/SoloLeveling/modif.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="SpecialStyle.css" />
     <link rel="stylesheet" href="../Style.css" />
+    <link rel="stylesheet" href="SpecialStyle.css" />
     <link rel="shortcut icon" type="image/png" href="Logo.png" />
     <script src="https://kit.fontawesome.com/85ca233acb.js" crossorigin="anonymous"></script>
     <meta name="google-adsense-account" content="ca-pub-1732017259884755">
@@ -22,10 +22,10 @@
             <div class="nav-links">
                 <ul>
                     <li>
-                        <p id="modifierWhere"><i class="fa-solid fa-thumbtack"></i><br />Avancée</p>
+                        <p id="modifierWhere"><i class="fa-solid fa-thumbtack"></i></p>
                     </li>
                     <li>
-                        <p href="#"><a href="modif.html"><i class="fa-solid fa-pen-nib"></i><br />Modifier</a></p>
+                        <p href="#"><a href="modif.html"><i class="fa-solid fa-pen-nib"></i></a></p>
                     </li>
                 </ul>
             </div>
