--- a/AstroRoyale/modif.html
+++ b/AstroRoyale/modif.html
@@ -16,9 +16,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="index.html"><img
-                    src="Logo.png"
-                    alt="logo" class="logo"></a>
+            <a href="index.html"><img src="Logo.png" alt="logo" class="logo"></a>
             <div class="nav-links">
                 <ul>
                     <li>
