Début e modif des pages perso

--- a/Naruto/index.html
+++ b/Naruto/index.html
@@ -45,18 +45,20 @@
             <p id="Chapter_Data"></p>
         </div>
         <div class="New" id="New">
-            <h1 id="New_Title"></h1>
+            <h1 id="New_Title">NOUVEAUX<button onclick="Click('New_Data')" id="toggleViewButtonNew_Data"><i
+                class="fi fi-rr-apps"></i></button><button onclick="toggleChapterData('New_Data')"
+            id="toggleViewButtonSpeNew_Data"><i class="fi fi-rr-angle-double-small-down"></i></button></h1>
             <p id="New_Data"></p>
         </div>
         <div class="Perso" id="Perso">
             <h1 id="Perso_Title">PERSONNAGES<button onclick="Click('Perso_Data')" id="toggleViewButtonPerso_Data"><i
-                        class="fi fi-rr-apps"></i></button><button
-                        onclick="toggleChapterData('Perso_Data')" id="toggleViewButtonSpePerso_Data"><i
-                            class="fi fi-rr-angle-double-small-down"></i></button></h1>
+                        class="fi fi-rr-apps"></i></button><button onclick="toggleChapterData('Perso_Data')"
+                    id="toggleViewButtonSpePerso_Data"><i class="fi fi-rr-angle-double-small-down"></i></button></h1>
             <p id="Perso_Data"></p>
         </div>
         <div class="Discord" id="Discord">
-            <h1 id="Discord_Title"></h1>
+            <h1 id="Discord_Title">DISCORD<button onclick="toggleChapterData('Discord_Data')"
+                    id="toggleViewButtonSpeDiscord_Data"><i class="fi fi-rr-angle-double-small-down"></i></button></h1>
             <p id="Discord_Data"></p>
         </div>
     </div>
