Petits problèmes réglés

--- a/Naruto/index.html
+++ b/Naruto/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <h1 id="Character_Name"></h1>
-    <p id="Data"></p>
+    <p style="padding-bottom: 50px;" id="Data"></p>
 
     <script src="Data.js"></script>
     <script src="../Main.js"></script>
